# rpmi

./: Cargo.toml  README.md  rpmi-git.spec  rpmi.desktop  rpmi.spec
.github/workflows/: rpmi-git.yml  rpmi-release.yml
assets/rpm-specs/: rpmi-git.spec  rpmi.spec
src/: dnf.rs  gui.rs  main.rs  utils.rs
