[package]
name = "egui_rpm_installer"
version = "1.0.0"
edition = "2024"
authors = ["arabianq"]
description = "Simple graphical utility that installs/upgrades/removes .rpm files built with Rust and EGUI."
keywords = ["linux", "rpm", "dnf", "package", "utility"]
homepage = "https://rpmi.arabianq.ru/"
repository = "https://github.com/arabianq/rpmi"
readme = "README.md"
license = "MIT"

[[bin]]
name = "rpmi"
path = "src/main.rs"

[dependencies]
egui = { version = "0.33.2", default-features = false, features = [
    "default_fonts",
] }
eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
rpm = { version = "0.18.4", default-features = false, features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
